# metadata-cleaner

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  SECURITY.md  main.py  manage.py  metadata-cleaner.spec  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/scripts/: package_smoke.py
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  poetry-publish.yml  poetry-release.yml  pyinstaller-build.yml  pypi-publish.yml  release-and-publish.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  MAINTENANCE.md  PLANNED_FEATURES.md  PUBLISH.md  README.md  REPO_HEALTH_REVIEW.md  SELF_IMPROVEMENT.md  USAGE.md
m_c/cli/: commands.py  main.py  utils.py
m_c/config/: settings.py
m_c/core/: file_utils.py  logger.py  metadata_processor.py  reporting.py  tool_manager.py
m_c/handlers/: audio_handler.py  base_handler.py  document_handler.py  image_handler.py  video_handler.py
m_c/tests/: test_metadata_cleaner.py
m_c/utils/: tool_utils.py
m_c/web/: __init__.py  server.py
metadata_cleaner/: cli.py  remover.py
metadata_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
metadata_cleaner/config/: __init__.py  settings.py
metadata_cleaner/core/: metadata_filter.py  metadata_utils.py
metadata_cleaner/file_handlers/: audio_handler.py  docx_handler.py  image_handler.py  metadata_extractor.py  pdf_handler.py  video_handler.py
metadata_cleaner/file_handlers/audio/: audio_handler.py  exiftool_audio_handler.py  mutagen_audio_handler.py  tinytag_audio_handler.py
metadata_cleaner/file_handlers/document/: __init__.py  document_handler.py  docx_handler.py  exiftool_pdf_handler.py  pdf_handler.py
metadata_cleaner/file_handlers/image/: exiftool_handler.py  extract_metadata.py  image_handler.py  image_utils.py  piexif_handler.py  remove_metadata.py
metadata_cleaner/file_handlers/video/: ffmpeg_video_handler.py  hachoir_video_handler.py  pyav_video_handler.py  video_handler.py
metadata_cleaner/logs/: logger.py
scripts/: check_dependencies.sh  install.sh  setup_env.sh
src/: cli.py  remover.py
src/core/: metadata_filter.py  remover.py
src/file_handlers/: audio_handler.py  image_handler.py  pdf_handler.py  video_handler.py
src/logs/: logger.py
test/: test_cli.py  test_config.py  test_edge_cases.py  test_file_handlers.py  test_integration.py  test_logging.py
tests/: test_all_file_formats.py  test_file_handlers.py  test_integration.py  test_metadata_filter.py  test_metadata_filter_variations.py  test_remover.py  test_settings_utils.py
