[tool.poetry]
name = "metadata-cleaner"
version = "3.0.0"
description = "A CLI tool to remove, edit, or selectively filter metadata from images, documents, audio, and video files."
authors = ["Sandeep Paidipati <sandeep.paidipati@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sandy-sp/metadata-cleaner"
repository = "https://github.com/sandy-sp/metadata-cleaner"

[[tool.poetry.packages]]
include = "m_c"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pillow = "^10.3.0"
mutagen = "^1.46.0"
pypdf = "^3.3.0"
ffmpeg-python = "^0.2.0"
pikepdf = "^9.0.0"
python-docx = "^0.8.11"
piexif = "^1.1.3"
tqdm = "^4.66.1"
pymupdf = "^1.25.3"
pyexiftool = "^0.5.6"

# Removed unnecessary dependencies: tinytag, hachoir, av, dmeta, py7zr
black = "^25.1.0"
flake8 = "^7.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
safety = "^2.3.4"
pip-audit = "^2.5.1"

[tool.poetry.scripts]
metadata-cleaner = "m_c.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
