[project]
name = "metadata-cleaner"
version = "3.18.0"
description = "A CLI tool to remove, edit, or selectively filter metadata from images, documents, audio, and video files."
authors = [
    { name = "Sandeep Paidipati", email = "sandeep.paidipati@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click>=8.1.3,<9.0.0",
    "pillow>=12.2.0,<13.0.0",
    "mutagen>=1.46.0,<2.0.0",
    "pypdf>=6.10.2,<7.0.0",
    "ffmpeg-python>=0.2.0,<0.3.0",
    "pikepdf>=9.0.0,<10.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "piexif>=1.1.3,<2.0.0",
    "tqdm>=4.66.1,<5.0.0",
    "pymupdf>=1.25.3,<2.0.0",
    "pyexiftool>=0.5.6,<0.6.0",
]

[project.urls]
Homepage = "https://github.com/sandy-sp/metadata-cleaner"
Repository = "https://github.com/sandy-sp/metadata-cleaner"
Issues = "https://github.com/sandy-sp/metadata-cleaner/issues"

[project.scripts]
metadata-cleaner = "m_c.cli.main:cli"

[tool.poetry]
packages = [{ include = "m_c" }]

# Removed unnecessary dependencies: tinytag, hachoir, av, dmeta, py7zr

[tool.poetry.group.dev.dependencies]
black = ">=26.3.1,<27.0.0"
flake8 = "^7.3.0"
pip-audit = "^2.10.0"
pytest = ">=9.0.3,<10.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = ["tools"]
